fixed form placeholder on mobile v1

--- a/src/screens/Learn/Excel/excel.scss
+++ b/src/screens/Learn/Excel/excel.scss
@@ -7,7 +7,7 @@
       display: flex;
 
       .title__description {
-        width: 60%;
+        width: 70%;
 
         .title__description__heading {
           display: flex;
@@ -37,6 +37,7 @@
       }
 
       .title__tags {
+        padding: 16px 0;
         display: flex;
         gap: 8px;
         width: fit-content;
@@ -45,15 +46,77 @@
         .tag__hours,
         .tag__projects,
         .tag__resources {
-            padding: 4px 12px;
-            border-radius: 25px;
-            border: 2px solid #2b2c54;
+          padding: 4px 12px;
+          border-radius: 25px;
+          border: 2px solid #2b2c54;
         }
 
         p {
           font-size: 12px;
           font-weight: 500;
           color: #2b2c54;
+        }
+      }
+
+      .title__media {
+        width: 30%;
+        height: 350px;
+
+        .title__media__container {
+          .media__container {
+            display: flex;
+            flex-direction: column;
+            justify-content: center;
+            align-items: flex-start;
+            gap: 16px;
+
+            video {
+              width: 100%;
+              height: 300px;
+            }
+
+            .media__getstarted__button {
+              border: 1px solid #2b2c54;
+              padding: 8px 24px;
+              border-radius: 4px;
+
+              p {
+                font-size: 14px;
+                font-weight: 700;
+                cursor: pointer;
+              }
+            }
+          }
+        }
+      }
+    }
+
+    .content__and__tutors {
+        display: flex;
+
+      .content__container {
+        border: 4px solid orange;
+        width: 50%;
+
+        .content__items {
+          border: 4px solid green;
+          display: flex;
+
+          .content__left {
+              display: flex;
+              flex-direction: column;
+
+              .circle {
+                  width: 18px;
+                  height: 18px;
+                  border-radius: 50%;
+                  border: 2px solid #2b2c54;
+              }
+
+              .border {
+                  border: 4px solid rgba($color: #000000, $alpha: 1.0);
+              }
+          }
         }
       }
     }
