--- a/src/screens/SignIn/signin.scss
+++ b/src/screens/SignIn/signin.scss
@@ -206,6 +206,12 @@
           width: 100% !important;
           padding: 28px !important;
 
+          input {
+            &::placeholder {
+              font-size: 15px !important;
+            }
+          }
+
           .form__heading {
             font-size: 28px !important;
           }
